# gateward

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gateward/: __main__.py  canary.py  cli.py  framing.py  patterns.py  proxy.py  rules.py  scanner.py  schema_store.py  session.py  storage.py
src/mcpgate/: __main__.py  cli.py  framing.py  patterns.py  proxy.py  rules.py  schema.sql  session.py  storage.py
tests/: fake_mcp_server.py  test_argument_injection.py  test_canary_tripwire.py  test_encoded_payload.py  test_exfil_url.py  test_framing.py  test_path_traversal_rule.py  test_proxy_integration.py  test_rules.py  test_scanner.py  test_schema_drift.py  test_secrets_rule.py  test_ssrf.py  test_storage.py  test_tool_description.py
