[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpgate"
version = "0.1.0"
description = "Transparent stdio proxy for MCP traffic with audit logging and inline attack blocking."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "MCPGate authors" }]
keywords = ["mcp", "proxy", "security", "audit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "pydantic>=2.5",
]

[project.scripts]
mcpgate = "mcpgate.cli:main"

[project.urls]
Homepage = "https://github.com/mcpgate/mcpgate"

[tool.hatch.build.targets.wheel]
packages = ["src/mcpgate"]

[tool.hatch.build.targets.sdist]
include = [
    "src/mcpgate",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
