[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gateward"
version = "0.2.0"
description = "Security gateway for Model Context Protocol (MCP) traffic. Blocks prompt injection, cross-repo exfiltration, and destructive commands."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
authors = [{name = "Hisham Bjihad", email = "mcpgate@proton.me"}]
keywords = ["mcp", "security", "proxy", "prompt-injection", "llm", "ai-agents", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "pydantic>=2.5",
]

[project.urls]
Homepage = "https://github.com/mcpgatehq/gateward"
Repository = "https://github.com/mcpgatehq/gateward"
Issues = "https://github.com/mcpgatehq/gateward/issues"

[project.scripts]
gateward = "gateward.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gateward"]

[tool.hatch.build.targets.sdist]
include = [
    "src/gateward",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]
